--- a/helm/prometheus-agent-app/Chart.yaml
+++ b/helm/prometheus-agent-app/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-appVersion: 0.0.1
+appVersion: v2.36.1
 
 # Please make sure your name DOES NOT end in "app" or "-app".
 name: prometheus-agent-app
