--- a/helm/prometheus-agent-app/templates/prometheus.yaml
+++ b/helm/prometheus-agent-app/templates/prometheus.yaml
@@ -21,25 +21,55 @@ spec:
   externalUrl: {{ include "external-url" .}}
   image: {{ include "prometheus-image" . }}
   listenLocal: false
+{{- if .Values.podMonitorNamespaceSelector }}
+{{ toYaml  .Values.podMonitorNamespaceSelector | indent 4 }}
+{{ else }}
   podMonitorNamespaceSelector: {}
+{{- end }}
+{{- if .Values.podMonitorSelector }}  
   podMonitorSelector:
-    matchLabels:
-{{ toYaml  .Values.labelSelector | indent 6 }}
+{{ toYaml  .Values.podMonitorSelector | indent 4 }}
+{{ else }}
+  podMonitorSelector: {}
+{{- end }}
   portName: http-web
+{{- if .Values.probeNamespaceSelector }}  
+  probeNamespaceSelector:
+{{ toYaml  .Values.probeNamespaceSelector | indent 4 }}
+{{ else }}
   probeNamespaceSelector: {}
+{{- end }}
+{{- if .Values.probeSelector }}
   probeSelector:
-    matchLabels:
-{{ toYaml  .Values.labelSelector | indent 6 }}
+{{ toYaml  .Values.probeSelector | indent 4 }}
+{{ else }}
+  probeSelector: {}
+{{- end }}
+{{- if .Values.remoteWrite }}
   remoteWrite:
 {{ toYaml .Values.remoteWrite | indent 2 }}
+{{ else }}
+  remoteWrite: []
+{{- end }}
   retention: 10d
   routePrefix: /
   scrapeInterval: 30s
   securityContext:
 {{ toYaml  .Values.securityContext | indent 4 }}
-  serviceAccountName: {{ .Values.serviceAccountName }}
+  serviceAccountName: {{ include "name" .}}
+{{- if .Values.serviceMonitorNamespaceSelector }}
+  serviceMonitorNamespaceSelector:
+{{ toYaml  .Values.serviceMonitorNamespaceSelector | indent 4 }}
+{{ else }}
   serviceMonitorNamespaceSelector: {}
+{{- end }}
+{{- if .Values.serviceMonitorSelector }}
   serviceMonitorSelector:
-    matchLabels:
-{{ toYaml  .Values.labelSelector | indent 6 }}
+{{ toYaml  .Values.serviceMonitorSelector | indent 4 }}
+{{ else }}
+  serviceMonitorSelector: {}
+{{- end }}
+  podMetadata:
+    labels:
+{{ include "labels.common" . | indent 6 }}
   version: {{ .Chart.AppVersion }}
