--- a/helm/prometheus-agent-app/Chart.yaml
+++ b/helm/prometheus-agent-app/Chart.yaml
@@ -1,22 +1,11 @@
 apiVersion: v2
 appVersion: v2.36.1
-
-# Please make sure your name DOES NOT end in "app" or "-app".
 name: prometheus-agent-app
-
-# Please describe what the app provides in a sentence or two.
-description: Please add description
-
+description: A Helm chart for Prometheus agent.
 home: https://github.com/giantswarm/prometheus-agent-app
-
-# If you have an icon/logo, you should add it to https://github.com/giantswarm/web-assets
-# and set the final URL as a value here and uncomment.
-#icon: https://s.giantswarm.io/app-icons/example/1/light.svg
-
 sources:
-- https://github.com/some-org/some-repo
-version: 0.0.0-dev # [[ .Version ]] if you're using architect instead of app-build-suite
+- https://github.com/giantswarm/prometheus-agent-app
+version: 0.1.0
 annotations:
-  application.giantswarm.io/team: TEAM-NAME # used through .Chart.Annotations.team (not replaced automatically)
-  branch: my-branch # Used through .Chart.Annotations.branch (This is not replaced automatically)
-  commit: f00bar # Used through .Chart.Annotations.commit (This is not replaced automatically)
+  application.giantswarm.io/team: atlas
+  branch: main
