--- a/helm/prometheus-agent-app/templates/service.yaml
+++ b/helm/prometheus-agent-app/templates/service.yaml
@@ -14,6 +14,5 @@ spec:
     port: 8080
     targetPort: reloader-web
   selector:
-    app.kubernetes.io/name: prometheus
-    app.kubernetes.io/instance: {{ .Release.Name }}
+    {{ include "labels.selector" . | nindent 4 }}
   sessionAffinity: ClientIP
