--- a/helm/prometheus-agent-app/templates/serviceaccount.yaml
+++ b/helm/prometheus-agent-app/templates/serviceaccount.yaml
@@ -3,5 +3,5 @@ kind: ServiceAccount
 metadata:
   labels:
 {{ include "labels.common" . | indent 4 }}
-  name: {{ .Release.Name }}
+  name: {{ include "name" .}}
   namespace: {{ .Release.Namespace }}
