--- a/helm/prometheus-agent-app/templates/clusterrole.yaml
+++ b/helm/prometheus-agent-app/templates/clusterrole.yaml
@@ -59,5 +59,5 @@ roleRef:
   name: {{ .Release.Name }}
 subjects:
 - kind: ServiceAccount
-  name: {{ .Release.Name }}
+  name: {{ include "name" .}}
   namespace: {{ .Release.Namespace }}
