--- a/helm/prometheus-agent-app/Chart.yaml
+++ b/helm/prometheus-agent-app/Chart.yaml
@@ -5,7 +5,7 @@ description: A Helm chart for Prometheus agent.
 home: https://github.com/giantswarm/prometheus-agent-app
 sources:
   - https://github.com/giantswarm/prometheus-agent-app
-version: 0.1.0
+version: [[ .Version ]]
 annotations:
   application.giantswarm.io/team: atlas
   branch: main
