Move from prometheus-agent-app to prometheus-agent

--- a/helm/prometheus-agent/Chart.yaml
+++ b/helm/prometheus-agent/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 appVersion: v2.36.1
-name: prometheus-agent-app
+name: prometheus-agent
 description: A Helm chart for Prometheus agent.
 home: https://github.com/giantswarm/prometheus-agent-app
 sources:
