Fix volume Warining

--- a/helm/prometheus-agent/templates/psp.yaml
+++ b/helm/prometheus-agent/templates/psp.yaml
@@ -29,6 +29,7 @@ spec:
     - 'secret'
     - 'configMap'
     - 'emptyDir'
+    - 'projected'
   allowPrivilegeEscalation: false
   hostNetwork: false
   hostIPC: false
