--- a/helm/prometheus-agent/templates/servicemonitor.yaml
+++ b/helm/prometheus-agent/templates/servicemonitor.yaml
@@ -13,4 +13,4 @@ spec:
     port: reloader-web
   selector:
     matchLabels:
-      {{ include "labels.selector" . | nindent 6 }}
+      {{- include "labels.selector" . | nindent 6 }}
