Use parent scope only when necessary
Signed-off-by: QuentinBisson <quentin@giantswarm.io>

--- a/helm/prometheus-agent/templates/remotewritesecrets.yaml
+++ b/helm/prometheus-agent/templates/remotewritesecrets.yaml
@@ -1,10 +1,10 @@
-{{- range $remoteWrite := $.Values.remoteWrite }}
+{{- range $remoteWrite := .Values.remoteWrite }}
 ---
 apiVersion: v1
 kind: Secret
 metadata:
   labels:
-    {{ include "labels.common" $ | nindent 4 }}
+    {{- include "labels.common" $ | nindent 4 }}
   name: {{ $remoteWrite.name }}-remote-write-api
   namespace: {{ $.Release.Namespace }}
 stringData:
