--- a/helm/prometheus-agent/charts/prometheus-agent/templates/remotewritesecrets.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/templates/remotewritesecrets.yaml
@@ -1,4 +1,5 @@
-{{- range $remoteWrite := .Values.remoteWrite }}
+{{- $remoteWrites := concat .Values.global.remoteWrite .Values.remoteWrite -}}
+{{- range $remoteWrite := $remoteWrites -}}
 ---
 apiVersion: v1
 kind: Secret
@@ -10,4 +11,4 @@ metadata:
 data:
   username: {{ $remoteWrite.username }}
   password: {{ $remoteWrite.password }}
-{{- end -}}
+{{ end }}
