--- a/helm/prometheus-agent/charts/prometheus-agent/templates/clusterrole.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/templates/clusterrole.yaml
@@ -3,7 +3,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-{{ include "labels.common" . | indent 4 }}
+    {{ include "labels.common" . | nindent 4 }}
   name: {{ .Release.Name }}
   namespace: {{ .Release.Namespace }}
 rules:
@@ -50,7 +50,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   labels:
-{{ include "labels.common" . | indent 4 }}
+    {{ include "labels.common" . | nindent 4 }}
   name: {{ .Release.Name }}
   namespace: {{ .Release.Namespace }}
 roleRef:
