--- a/helm/prometheus-agent/charts/prometheus-agent/templates/config_role.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/templates/config_role.yaml
@@ -3,7 +3,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   labels:
-{{ include "labels.common" . | indent 4 }}
+    {{ include "labels.common" . | nindent 4 }}
   name: {{ .Release.Name }}-config
   namespace: {{ .Release.Namespace }}
 rules:
@@ -18,7 +18,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   labels:
-{{ include "labels.common" . | indent 4 }}
+    {{ include "labels.common" . | nindent 4 }}
   name: {{ .Release.Name }}-config
   namespace: {{ .Release.Namespace }}
 roleRef:
