--- a/helm/prometheus-agent/charts/prometheus-agent/templates/serviceaccount.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/templates/serviceaccount.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:
-{{ include "labels.common" . | indent 4 }}
+    {{ include "labels.common" . | nindent 4 }}
   name: {{ include "name" .}}
   namespace: {{ .Release.Namespace }}
