Use latest prometheus version

--- a/helm/prometheus-agent/charts/prometheus-agent/templates/remotewritesecrets.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/templates/remotewritesecrets.yaml
@@ -8,7 +8,7 @@ metadata:
     {{- include "labels.common" $ | nindent 4 }}
   name: {{ $remoteWrite.name }}-remote-write-api
   namespace: {{ $.Release.Namespace }}
-data:
+stringData:
   username: {{ $remoteWrite.username }}
   password: {{ $remoteWrite.password }}
 {{ end }}
