Address review comments

--- a/helm/prometheus-agent/charts/prometheus-agent/templates/prometheus.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/templates/prometheus.yaml
@@ -57,6 +57,7 @@ spec:
       username:
         key: username
         name: {{ $remoteWrite.name }}-remote-write-api
+    remoteTimeout: 5m
     url: {{ $remoteWrite.url }}
 {{- end -}}
 {{- else }}
