--- a/helm/prometheus-agent/values.yaml
+++ b/helm/prometheus-agent/values.yaml
@@ -1,30 +1,38 @@
-image:
-  registry: quay.io
-  name: giantswarm/prometheus
-  tag: ""
-  sha: ""
-  pullPolicy: "Always"
+global:
+  remoteWrite: []
+  # - name: ""     # Name of the remote write integration
+  #   url: ""      # URL to send data to
+  #   username: "" # Username to use
+  #   password: "" # Password
 
-remoteWrite: []
+prometheus-agent:
+  image:
+    registry: quay.io
+    name: giantswarm/prometheus
+    tag: ""
+    sha: ""
+    pullPolicy: "Always"
 
-probeNamespaceSelector: {}
-probeSelector:
-  matchLabels:
-    app: prometheus-agent
-serviceMonitorNamespaceSelector: {}
-serviceMonitorSelector: {}
-podMonitorNamespaceSelector: {}
-podMonitorSelector:
-  matchLabels:
-    app: prometheus-agent
+  remoteWrite: []
+  # - name: ""     # Name of the remote write integration
+  #   url: ""      # URL to send data to
+  #   username: "" # Username to use
+  #   password: "" # Password
 
-securityContext:
-  fsGroup: 2000
-  runAsGroup: 2000
-  runAsNonRoot: true
-  runAsUser: 1000
-  seccompProfile:
-    type: RuntimeDefault
+  probeNamespaceSelector: {}
+  probeSelector: {}
+  serviceMonitorNamespaceSelector: {}
+  serviceMonitorSelector: {}
+  podMonitorNamespaceSelector: {}
+  podMonitorSelector: {}
 
-psp:
-  enabled: true
+  securityContext:
+    fsGroup: 2000
+    runAsGroup: 2000
+    runAsNonRoot: true
+    runAsUser: 1000
+    seccompProfile:
+      type: RuntimeDefault
+
+  psp:
+    enabled: true
