--- a/helm/prometheus-agent/charts/prometheus-agent/templates/prometheus.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/templates/prometheus.yaml
@@ -59,6 +59,10 @@ spec:
         name: {{ $remoteWrite.name }}-remote-write-api
     remoteTimeout: 5m
     url: {{ $remoteWrite.url }}
+    queueConfig:
+      capacity: 10000
+      maxSamplesPerSend: 1000
+      minShards: 10
 {{- end -}}
 {{- else }}
   remoteWrite: []
