--- a/helm/prometheus-agent/charts/prometheus-agent/templates/prometheus.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/templates/prometheus.yaml
@@ -59,10 +59,10 @@ spec:
         name: {{ $remoteWrite.name }}-remote-write-api
     remoteTimeout: 5m
     url: {{ $remoteWrite.url }}
+{{- if $remoteWrite.queueConfig }}
     queueConfig:
-      capacity: 10000
-      maxSamplesPerSend: 1000
-      minShards: 10
+      {{- toYaml $remoteWrite.queueConfig | nindent 6 }}
+{{- end -}}
 {{- end -}}
 {{- else }}
   remoteWrite: []
