--- a/helm/prometheus-agent/charts/prometheus-agent/values.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/values.yaml
@@ -10,6 +10,11 @@ remoteWrite: []
 #   url: ""      # URL to send data to
 #   username: "" # Username to use
 #   password: "" # Password
+##  https://github.com/prometheus-community/prometheus-operator/blob/main/Documentation/api.md#queueconfig
+#   queueConfig:
+#     capacity: 10000
+#     maxSamplesPerSend: 1000
+#     minShards: 10
 
 probeNamespaceSelector: {}
 probeSelector: {}
