Change remote write config (#11)
* Change remote write configuration

Signed-off-by: QuentinBisson <quentin@giantswarm.io>

* Use parent scope only when necessary

Signed-off-by: QuentinBisson <quentin@giantswarm.io>

* move to subchart

Signed-off-by: QuentinBisson <quentin@giantswarm.io>

* use global for remote writes

* move secret from stringdata to data

* Update _helpers.tpl

* Fix missing secrets

* Use latest prometheus version

* Configure remote write queue config

* Make queueConfig Configurable though values

Signed-off-by: QuentinBisson <quentin@giantswarm.io>
Co-authored-by: Mohamed Chiheb <mohamed@giantswarm.io>

--- a/helm/prometheus-agent/charts/prometheus-agent/templates/prometheus.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/templates/prometheus.yaml
@@ -59,6 +59,10 @@ spec:
         name: {{ $remoteWrite.name }}-remote-write-api
     remoteTimeout: 5m
     url: {{ $remoteWrite.url }}
+{{- if $remoteWrite.queueConfig }}
+    queueConfig:
+      {{- toYaml $remoteWrite.queueConfig | nindent 6 }}
+{{- end -}}
 {{- end -}}
 {{- else }}
   remoteWrite: []
