--- a/helm/prometheus-agent/values.yaml
+++ b/helm/prometheus-agent/values.yaml
@@ -10,6 +10,8 @@ global:
   #     maxSamplesPerSend: 1000
   #     minShards: 10
 
+  externalLabels: []
+
 prometheus-agent:
   image:
     registry: quay.io
