--- a/helm/prometheus-agent/values.yaml
+++ b/helm/prometheus-agent/values.yaml
@@ -10,6 +10,8 @@ global:
   #     maxSamplesPerSend: 1000
   #     minShards: 10
 
+  externalLabels: []
+
 prometheus-agent:
   image:
     registry: quay.io
@@ -25,9 +27,11 @@ prometheus-agent:
   #   password: "" # Password
   #   #   https://github.com/prometheus-community/prometheus-operator/blob/main/Documentation/api.md#queueconfig
   #   queueConfig:
-  #     capacity: 10000
-  #     maxSamplesPerSend: 1000
-  #     minShards: 10
+  #     capacity: 30000
+  #     maxSamplesPerSend: 10000
+  #     maxShards: 10
+
+  externalLabels: []
 
   probeNamespaceSelector: {}
   probeSelector: {}
