--- a/helm/prometheus-agent/charts/prometheus-agent/templates/prometheus.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/templates/prometheus.yaml
@@ -29,7 +29,8 @@ spec:
   {{- end }}
   listenLocal: false
 {{- if .Values.podMonitorNamespaceSelector }}
-    {{ toYaml  .Values.podMonitorNamespaceSelector | nindent 4 }}
+  podMonitorNamespaceSelector:
+    {{- toYaml  .Values.podMonitorNamespaceSelector | nindent 4 }}
 {{ else }}
   podMonitorNamespaceSelector: {}
 {{- end }}
