--- a/helm/prometheus-agent/charts/prometheus-agent/templates/config_role.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/templates/config_role.yaml
@@ -1,4 +1,4 @@
-## Allow the app to access configmaps in it's own namespace
+## Allows the app to access configmaps in it's own namespace
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
