--- a/helm/prometheus-agent/Chart.yaml
+++ b/helm/prometheus-agent/Chart.yaml
@@ -8,7 +8,7 @@ dependencies:
 home: https://github.com/giantswarm/prometheus-agent-app
 sources:
   - https://github.com/giantswarm/prometheus-agent-app
-version: [[ .Version ]]
+version: 0.1.6
 annotations:
   application.giantswarm.io/team: atlas
 restrictions:
