--- a/helm/prometheus-agent/Chart.yaml
+++ b/helm/prometheus-agent/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-appVersion: v2.39.1
+appVersion: v2.40.5
 name: prometheus-agent
 description: A Helm chart for Prometheus agent.
 dependencies:
@@ -8,7 +8,7 @@ dependencies:
 home: https://github.com/giantswarm/prometheus-agent-app
 sources:
   - https://github.com/giantswarm/prometheus-agent-app
-version: [[ .Version ]]
+version: 0.1.6
 annotations:
   application.giantswarm.io/team: atlas
 restrictions:
