--- a/helm/prometheus-agent/charts/prometheus-agent/values.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/values.yaml
@@ -7,6 +7,7 @@ image:
 
 remoteWrite: []
 # - name: ""     # Name of the remote write integration
+#   proxyUrl: ""
 #   url: ""      # URL to send data to
 #   username: "" # Username to use
 #   password: "" # Password
@@ -15,6 +16,8 @@ remoteWrite: []
 #     capacity: 30000
 #     maxSamplesPerSend: 10000
 #     maxShards: 10
+#   tlsConfig:
+#     insecureSkipVerify: false
 
 externalLabels: {}
 
