watchdog to reset agent if too much data is enqueued, to reduce stress on remote prometheus

--- a/helm/prometheus-agent/values.yaml
+++ b/helm/prometheus-agent/values.yaml
@@ -12,6 +12,9 @@ global:
 
   externalLabels: {}
 
+image:
+  tag: ""
+
 prometheus-agent:
   image:
     registry: quay.io
@@ -73,3 +76,6 @@ prometheus-agent:
 
   psp:
     enabled: true
+
+  configmaps:
+    - prometheus-agent-watchdog
