--- a/helm/prometheus-agent/charts/prometheus-agent/values.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/values.yaml
@@ -60,3 +60,12 @@ securityContext:
 
 psp:
   enabled: true
+
+watchdog:
+  enabled: true
+  # command:
+  #   - sh
+  #   - /etc/prometheus/configmaps/prometheus-agent-watchdog/watchdog.sh
+
+configmaps:
+  - prometheus-agent-watchdog
