--- a/helm/prometheus-agent/values.yaml
+++ b/helm/prometheus-agent/values.yaml
@@ -77,5 +77,9 @@ prometheus-agent:
   psp:
     enabled: true
 
-  configmaps:
-    - prometheus-agent-watchdog
+  watchdog:
+    enabled: true
+    command:
+      - sh
+      - WATCHDOG_OVERLOAD_TOLERANCE=4
+      - /etc/prometheus/configmaps/prometheus-agent-watchdog/watchdog.sh
