Upgrade prometheus 2.41.0 and support global.image.registry

--- a/helm/prometheus-agent/values.yaml
+++ b/helm/prometheus-agent/values.yaml
@@ -1,4 +1,6 @@
 global:
+  image:
+    registry: docker.io
   remoteWrite: []
   # - name: ""     # Name of the remote write integration
   #   url: ""      # URL to send data to
@@ -14,7 +16,6 @@ global:
 
 prometheus-agent:
   image:
-    registry: quay.io
     name: giantswarm/prometheus
     tag: ""
     sha: ""
