Push to default catalog as playground is going away

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,19 @@ workflows:
       - architect/push-to-app-catalog:
           context: "architect"
           executor: "app-build-suite"
-          name: "package and push prometheus-agent chart"
+          name: push-to-default-app-catalog
+          app_catalog: "default-catalog"
+          app_catalog_test: "default-test-catalog"
+          chart: "prometheus-agent"
+          # Trigger job on git tag.
+          filters:
+            tags:
+              only: /^v.*/
+
+      - architect/push-to-app-catalog:
+          context: "architect"
+          executor: "app-build-suite"
+          name: push-to-giantswarm-playground-app-catalog
           app_catalog: "giantswarm-playground-catalog"
           app_catalog_test: "giantswarm-playground-test-catalog"
           chart: "prometheus-agent"
@@ -16,3 +28,5 @@ workflows:
           filters:
             tags:
               only: /^v.*/
+
+                       
