Try prometheus with stringlabels

--- a/helm/prometheus-agent/values.yaml
+++ b/helm/prometheus-agent/values.yaml
@@ -17,7 +17,7 @@ global:
 prometheus-agent:
   image:
     name: giantswarm/prometheus
-    tag: ""
+    tag: "2.43.0+stringlabels"
     sha: ""
     pullPolicy: "Always"
 
