--- a/helm/prometheus-agent/charts/prometheus-agent/templates/prometheus.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/templates/prometheus.yaml
@@ -100,6 +100,7 @@ spec:
   remoteWrite: []
 {{- end }}
   retention: 10d
+  scrapeInterval: {{ .Values.scrapeInterval }}
   securityContext:
     {{- toYaml  .Values.securityContext | nindent 4 }}
   serviceAccountName: {{ include "name" .}}
