--- a/helm/prometheus-agent/charts/prometheus-agent/values.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/values.yaml
@@ -53,6 +53,8 @@ serviceMonitorSelector: {}
 podMonitorNamespaceSelector: {}
 podMonitorSelector: {}
 
+scrapeInterval: 60s
+
 securityContext:
   fsGroup: 2000
   runAsGroup: 2000
