--- a/helm/prometheus-agent/charts/prometheus-agent/templates/prometheus.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/templates/prometheus.yaml
@@ -22,6 +22,13 @@ spec:
       name: http-web
       protocol: TCP
     {{- if .Values.watchdog.enabled }}
+    lifecycle:                                                                                                                                                                                                                                                
+      preStop:                                                                                                                                                                                                                                                
+        exec:                                                                                                                  
+          command:                                                                                                             
+          - /bin/sh                                                                                                            
+          - -c                                                                                                                 
+          - rm -f /prometheus/wal/*                                                                                            
     livenessProbe:
       exec:
         command:
