Fix preStop with removing the entire wal directory

--- a/helm/prometheus-agent/charts/prometheus-agent/templates/prometheus.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/templates/prometheus.yaml
@@ -28,7 +28,7 @@ spec:
           command:                                                                                                             
           - /bin/sh                                                                                                            
           - -c                                                                                                                 
-          - rm -f /prometheus/wal/*                                                                                            
+          - rm -rf /prometheus/wal
     livenessProbe:
       exec:
         command:
