--- a/helm/prometheus-agent/charts/prometheus-agent/values.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/values.yaml
@@ -22,6 +22,11 @@ remoteWrite: []
 #   tlsConfig:
 #     insecureSkipVerify: false
 
+replicas: 1
+shards: 1
+
+retention: 10d
+
 externalLabels: {}
 
 serviceMonitor:
