--- a/helm/prometheus-agent/charts/prometheus-agent/templates/psp-rbac.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/templates/psp-rbac.yaml
@@ -1,3 +1,4 @@
+{{- if .Capabilities.APIVersions.Has "policy/v1beta1/PodSecurityPolicy" }}
 {{ if .Values.psp.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -29,4 +30,5 @@ roleRef:
   kind: ClusterRole
   name: {{ include "psp.name" . }}
   apiGroup: rbac.authorization.k8s.io
+{{- end }}
 {{- end }}
