--- a/helm/prometheus-agent/charts/prometheus-agent/templates/psp.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/templates/psp.yaml
@@ -1,3 +1,4 @@
+{{- if .Capabilities.APIVersions.Has "policy/v1beta1/PodSecurityPolicy" }}
 {{ if .Values.psp.enabled }}
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
@@ -34,4 +35,5 @@ spec:
   hostNetwork: false
   hostIPC: false
   hostPID: false
+{{- end }}
 {{- end }}
