--- a/helm/prometheus-agent/charts/prometheus-agent/templates/networkpolicy.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/templates/networkpolicy.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   labels:
-    {{ include "labels.common" . | nindent 4 }}
+    {{- include "labels.common" . | nindent 4 }}
   name: {{ include "name" . }}
   namespace: {{ .Release.Namespace }}
 spec:
