--- a/helm/prometheus-agent/charts/prometheus-agent/templates/psp.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/templates/psp.yaml
@@ -1,5 +1,5 @@
 {{- if .Capabilities.APIVersions.Has "policy/v1beta1/PodSecurityPolicy" }}
-{{ if .Values.psp.enabled }}
+{{- if .Values.psp.enabled }}
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
