--- a/helm/prometheus-agent/charts/prometheus-agent/templates/service.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/templates/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    {{ include "labels.common" . | nindent 4 }}
+    {{- include "labels.common" . | nindent 4 }}
   name: {{ .Release.Name }}
   namespace: {{ .Release.Namespace }}
 spec:
