--- a/helm/prometheus-agent/charts/prometheus-agent/templates/servicemonitor.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/templates/servicemonitor.yaml
@@ -3,7 +3,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
-    {{ include "labels.common" . | nindent 4 }}
+    {{- include "labels.common" . | nindent 4 }}
   name: {{ .Release.Name }}
   namespace: {{ .Release.Namespace }}
 spec:
