--- a/helm/prometheus-agent/values.yaml
+++ b/helm/prometheus-agent/values.yaml
@@ -21,6 +21,10 @@ prometheus-agent:
     sha: ""
     pullPolicy: "Always"
 
+  pdb:
+    minAvailable: 0
+    maxUnavailable: 100%
+
   remoteWrite: []
   # - name: ""     # Name of the remote write integration
   #   proxyUrl: ""
