Add safe to evict annotation to the agent
Signed-off-by: QuentinBisson <quentin@giantswarm.io>

--- a/helm/prometheus-agent/charts/prometheus-agent/templates/prometheus.yaml
+++ b/helm/prometheus-agent/charts/prometheus-agent/templates/prometheus.yaml
@@ -55,6 +55,8 @@ spec:
   # workaround - required to use an `exec command` livenessProbe.
   listenLocal: true
   podMetadata:
+    annotations:
+      cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
     labels:
       {{ include "labels.common" . | nindent 6 }}
 {{- if .Values.podMonitorNamespaceSelector }}
